Closed
Bug 26509
Opened 26 years ago
Closed 25 years ago
Context menus don't grab the mouse on linux
Categories
(Core :: XUL, defect, P4)
Tracking
()
VERIFIED
FIXED
People
(Reporter: rzach, Assigned: blizzard)
Details
(Keywords: platform-parity, Whiteboard: [nsbeta3+])
Attachments
(2 files)
|
2.98 KB,
patch
|
Details | Diff | Splinter Review | |
|
5.72 KB,
patch
|
Details | Diff | Splinter Review |
I didn't want to resurrect bug 11266, so I'm filing a new bug on a related
issue.
When the focus switches to another window, xpmenus (menus from menu bar,
drop-downs from select fields, etc) stay on top until you click in the new
window. It is even possible to even change the selection in the "disembodied"
menu as long as the mouse doesn't leave it.
To reproduce:
1. Open menu, eg by clicking on Bookmarks menu tab
2. Position cursor in menu
3. Alt-Tab to another window
Actual result: the menu stays in front even though the browser window is now
obscured by another app. You can change the selection by moving the mouse up
and down. The menu will stay on top even if you move the cursor outside the
menu. It will close only if you click in the new window.
Expected result: the menu should close/drop-downs collapse as soon as you click
Alt-Tab.
Linux build 2000.02.02.09
Comment 1•26 years ago
|
||
the actual expected result would be for nothing to happen. There is a bug right
now causing the menus to not always grab the mouse. I think I know how to fix
this. normally this does work though.
| Reporter | ||
Comment 2•26 years ago
|
||
Yes, most recently having a window or a select pull-down open and clicking
Alt-TAB does nothing. I'd rather have it collapse the menu/pulldown and then
switch, but Gnome apps and NS 4.7 don't, so I'll resolve this WFM.
Status: NEW → RESOLVED
Closed: 26 years ago
Resolution: --- → WORKSFORME
| Reporter | ||
Comment 4•26 years ago
|
||
After reading bug 28319: this still happens with context menus. Reopen, change
summary.
Status: VERIFIED → REOPENED
Resolution: WORKSFORME → ---
Summary: Menus stay on top after parent window loses focus → Context menus stay on top after parent window loses focus
Comment 5•26 years ago
|
||
changing summary, accepting
Status: REOPENED → ASSIGNED
Summary: Context menus stay on top after parent window loses focus → Context menus don't grab the mouse on linux
Target Milestone: M15
Comment 6•26 years ago
|
||
bill, pink -- the only reason this would happen is if the mouse is trying to be
grabbed before the popup window is visible... are we doing any tricks here with
changing visibilty of the popup?
Target Milestone: M15 → M17
I dunno. From my perspective, it's just xul magic (we define a context menu and
connect it to the content area in xul; the xptoolkit/widget code handles
detecting context menu events, opening the popup, and dismissing it when
necessary). pink/saari/hyatt would know more.
Comment 9•26 years ago
|
||
mass-moving all bugs to m21 that are not dofood+, or nsbeta2+
Target Milestone: M18 → M21
Comment 10•26 years ago
|
||
*spam*: transferring current XP Menu bugs over to jrgm, the new component owner.
feel free to add me to the cc list (unless am the Reporter) of any of these, if
you have any questions/etc.
QA Contact: sairuh → jrgm
Updated•25 years ago
|
Comment 11•25 years ago
|
||
this is really annoying and needs to be fixed.
Comment 12•25 years ago
|
||
nsbeta3+ because this is driving pavlov insane, and we can't have that. Lower
priority, fix other bugs first.
Priority: P3 → P4
Whiteboard: [nsbeta3+]
Comment 13•25 years ago
|
||
I have something that seems to fix this, but i'm not sure I like it.. i'm
getting blizzard to take a look at it to get his input.
| Assignee | ||
Comment 14•25 years ago
|
||
I didn't like it either. I'm uploading another patch in a bit.
| Assignee | ||
Comment 15•25 years ago
|
||
| Assignee | ||
Comment 16•25 years ago
|
||
Uhh...looking for review/comment on this. Hello, anyone there?
| Assignee | ||
Comment 17•25 years ago
|
||
| Assignee | ||
Comment 18•25 years ago
|
||
New patch that fixes some of the midleading variable naming and also is less
agressive about trying to grab the window on an nsIWindow::Show()
| Assignee | ||
Comment 19•25 years ago
|
||
I have an r=pavlov on this.
| Assignee | ||
Updated•25 years ago
|
| Assignee | ||
Comment 22•25 years ago
|
||
Checked in.
Status: ASSIGNED → RESOLVED
Closed: 26 years ago → 25 years ago
Resolution: --- → FIXED
Component: XP Toolkit/Widgets: Menus → XUL
QA Contact: jrgmorrison → xptoolkit.widgets
You need to log in
before you can comment on or make changes to this bug.
Description
•